# NGPIris

./: .coveralls.yml  .gitignore  .travis.yml  MANIFEST.in  README.md  credentials.json  docs.md  freeze.txt  keyfile.json  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  ruff.toml  ruff_stats_to_md.py  setup.cfg  setup.py  setup.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  standard-issue.md
.github/workflows/: basedpyright.yml  publish-to-pypi.yml  pytest.yml  pytype.yml  pytype_and_pytest.yml  ruff.yml
HCPInterface/: __init__.py
HCPInterface/cli/: base.py  functions.py  hci_functions.py
HCPInterface/hci/: hci.py
HCPInterface/hcp/: errors.py  hcp.py
HCPInterface/io/: io.py
HCPInterface/preproc/: preproc.py
HCPinterface/: __init__.py
HCPinterface/cli/: base.py  downloader.py  functions.py  legacy_downloader.py  uploader.py
HCPinterface/wrappers/: old_buckets_downloader.py  uploader.py
NGPIris/: __init__.py
NGPIris/cli/: __init__.py  base.py  exceptions.py  functions.py  helpers.py  sections.py  utils.py
NGPIris/hci/: __init__.py  exceptions.py  hci.py  helpers.py  template_query.json
NGPIris/hcp/: __init__.py  exceptions.py  hcp.py  helpers.py  statistics.py
NGPIris/parse_credentials/: __init__.py  parse_credentials.py
NGPIris/preproc/: preproc.py
NGPIris/utils/: __init__.py  utils.py
NGPIris2/: __init__.py  utils.py
NGPIris2/cli/: __init__.py
NGPIris2/hci/: __init__.py  hci.py  helpers.py
NGPIris2/hcp/: __init__.py  exceptions.py  hcp.py  helpers.py  multipart_upload.py  statistics.py
NGPIris2/parse_credentials/: parse_credentials.py
NGPIris2/utils/: __init__.py
cli/: commands.py
credentials/: credentials_template.json
credentials and tokens/: credentials_template.json
data/: test_reads_R1.fasterq
docs/: IRIS_5_changelog.md  README.md  Tutorial.md  conf.py  index.rst
hci/: hci.py
hcp/: config.py  errors.py  hcp.py  helpers.py
parse_credentials/: parse_credentials.py
proxies/: proxy_template.json
queries/: query_template.json
tests/: conftest.py  hcp_test.py  keys.json  simpleConnectionTest.py  test_cli.py  test_cmds.py  test_conf_template.ini  test_hci.py  test_hcp.py  test_parse_credentials.py
tests/data/: json_test_query.json  test_reads_R2.fasterq
wrappers/: downloader.py  old_buckets_downloader.py  uploader.py
