[metadata]
name = "HCPInterface"
version = "2.0.0"
[build-system]
requires = ["setuptools>=42","wheel","HCPInterface"]
build-backend = "setuptools.build_meta"
[project]
name = "HCPInterface"
authors = [{name = "Isak Sylvin", email = "isak.sylvin@gu.se"},]
readme="README.md"
dynamic = ["version","description"]
