[project]
name = "NGPIris2"
version = "0.1.6"
dependencies = [
    "requests >= 2.31.0",
    "pandas >= 2.1.4",
    "urllib3 == 1.26.18",
    "requests >= 2.31.0",
    "boto3 >= 1.26.76",
    "parse >= 1.19.1",
    "tqdm >= 4.66.2"
]
authors = [
    {name = "Erik Brink", email = "erik.brink@gu.se"}
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["NGPIris2", "NGPIris2.cli", "NGPIris2.hci", "NGPIris2.hcp", "NGPIris2.parse_credentials"]
