[metadata]
name=NGPIris
version=3.2.1
long_description=file: README.md
long_description_content_type=text/markdown
url=https://github.com/genomic-medicine-sweden/NGPIris
author=Isak Sylvin
author_email=isak.sylvin@gu.se
project_urls=
    Bug Tracker = https://github.com/genomic-medicine-sweden/NGPIris/issues
classifiers=
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: OS Independent
